# conway-3d

./: CMakeLists.txt
src/: conway.c
